# hercules-testzeus

./: .env-example  agents_llm_config_custom.json  direct_converse_search.py  record_converse_fast.py  record_converse_test.py  record_levis_test.py  record_levis_test_fast.py  record_puma_test.py  record_puma_test.sh  test_levi_url.py
.claude/: settings.local.json
opt/test_data/: test_data.txt
testzeus_hercules/core/tools/: enter_text_using_selector.py
testzeus_hercules/utils/: model_utils.py
video-analysis-agent/: .gitignore  README.md  config.json  main.py  pyproject.toml  requirements.txt  setup.sh  validate.sh
video-analysis-agent/.claude/: settings.local.json
video-analysis-agent/sample_inputs/: agent_inner_logs.json
video-analysis-agent/src/: __init__.py  deviation_reporter.py  output_comparator.py  planning_log_parser.py  video_analyzer.py
